package models;

public class Capteur {
    private String type;
    private String valeur;

    public void detecterEtat() {
        // Implementation here
    }

    public void envoyerDonnees(String donnees) {
        // Implementation here
    }
}
