package models;

public class Equipement {
    private String nomEquipement;
    private int niveauBatterie;
    private String type;

    public boolean getStatut() {
        // Implementation here
        return false;
    }

    public void setStatut(boolean statut) {
        // Implementation here
    }

    public int obtenirNiveauBatterie() {
        // Implementation here
        return 0;
    }

    public boolean detecterBatterieFaible() {
        // Implementation here
        return false;
    }

    public void gererChargeBatterie() {
        // Implementation here
    }
}
