package models;

public class Piece {
    private String nom;

    public void ajouterEquipement(Equipement equipement) {
        // Implementation here
    }

    public void supprimerEquipement(Equipement equipement) {
        // Implementation here
    }
}
